--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,3 +27,47 @@ footer{
 .contact_li{
 	color: white;
 }
+.encabezado {
+  font-family: Helvetica, sans-serif;
+  text-align: center;
+  margin-top: 50px;
+}
+.texto {
+  font-size: 18px;
+}
+.botonGitHub {
+  font-size: 16px;
+  border: 1px solid #482259;
+  border-radius: 4px;
+  padding: 15px;
+  background-color: #FFF;
+  margin-left: 41%;
+  margin-bottom: 30px;
+}
+.botonGitHub:hover {
+  background-color: #482259;
+  color: #FFF;
+}
+
+.imagenSass {
+  width: 300px;
+  height: 200px;
+  display: inline-block;
+  text-align: center;
+  position: relative;
+  left: 130px;
+  margin-left: 40px;
+  margin-bottom: 150px;
+}
+.imagenTexto {
+  width: 250px;
+  height: 150px;
+}
+#seccionDiseño{
+  font-family: 'Roboto', sans-serif;
+  color: #312E2E;
+}
+
+hr.diseño {
+  width: 100px;
+}
